--- a/.eslintrc
+++ b/.eslintrc
@@ -16,15 +16,15 @@
     "no-unused-expressions": "error",
     "no-undef": "error",
     "no-console": "off",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
     "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "env": {
     "browser": true,
     "es2021": true,
-    "node":true
+    "node": true
   },
   "globals": {
-    "process":"readonly"
+    "process": "readonly"
   }
 }
