--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "no-unused-expressions": "error",
     "no-undef": "error",
     "no-console": "off",
-    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "env": {
